@@ -36,9 +36,9 @@ LIBKDCRAW_BUILD_TEST(identify)
 LIBKDCRAW_BUILD_TEST(simple_dcraw)
 LIBKDCRAW_BUILD_TEST(mem_image)
 LIBKDCRAW_BUILD_TEST(dcraw_emu)
-LIBKDCRAW_BUILD_TEST(dcraw_half)
 #IF(WIN32)
 #    LIBKDCRAW_BUILD_TEST(half_mt_win32)
 #ELSE(WIN32)
 #    LIBKDCRAW_BUILD_TEST(half_mt)
+#    LIBKDCRAW_BUILD_TEST(dcraw_half)
 #ENDIF(WIN32)
