@@ -1,5 +1,6 @@
 0.4.0 - Released with KDE 4.2.0
 ------------------------------------------------------------------------
+- Updated to LibRaw 0.6.6 : Changes in Panasonic FZ50 files processing.
 - Updated to LibRaw 0.6.5 : Fixed file descriptor and buffer memory leak when thumbnail extractor is called, 
                             but library object is not properly initialized.
                             Fixes in Imacon files unpacking.
